--- a/Makefile.in
+++ b/Makefile.in
@@ -63,7 +63,7 @@ all: byte $(OCAMLBEST)
 LIB= unionfind heap bitv
 LIB:=$(patsubst %, $(LIBDIR)/%.cmo, $(LIB))
 
-CMO = util blocks persistent imperative \
+CMO = 	util blocks persistent imperative \
 	delaunay builder classic rand oper \
 	path traverse coloring topological components kruskal flow \
         graphviz gml dot_parser dot_lexer dot pack \
@@ -74,7 +74,7 @@ CMX = $(CMO:.cmo=.cmx)
 CMA = graph.cma
 CMXA = graph.cmxa
 
-CMI = sig dot_ast sig_pack
+CMI = sig sig_pack dot_ast
 CMI := $(patsubst %, src/%.cmi, $(CMI))
 
 GENERATED = META \
@@ -225,7 +225,7 @@ endif
 
 DOCFILES=$(NAME).ps $(NAME).html
 
-NODOC	= util blocks dot_parser dot_lexer
+NODOC	= blocks dot_parser dot_lexer
 NODOC	:= $(patsubst %, $(SRCDIR)/%.cmo, $(NODOC))
 DOC_CMO	= $(filter-out $(NODOC) $(LIB), $(CMO))
 DOC_SRC	= $(CMI:.cmi=.mli) $(DOC_CMO:.cmo=.mli) $(DOC_CMO:.cmo=.ml)
