--- a/Makefile.in
+++ b/Makefile.in
@@ -6,7 +6,7 @@
 #                                                                        #
 #  This software is free software; you can redistribute it and/or        #
 #  modify it under the terms of the GNU Library General Public           #
-#  License version 2, with the special exception on linking              #
+#  License version 2.1, with the special exception on linking            #
 #  described in file LICENSE.                                            #
 #                                                                        #
 #  This software is distributed in the hope that it will be useful,      #
@@ -250,8 +250,8 @@ wc:
 headers:
 	headache -c misc/headache_config.txt -h misc/header.txt \
 		Makefile.in configure.in README \
-		$(LIBDIR)*.ml $(LIBDIR)*.ml[ily] \
-		$(SRCDIR)*.ml $(SRCDIR)*.ml[ily] \
+		$(LIBDIR)/*.ml $(LIBDIR)/*.ml[ily] \
+		$(SRCDIR)/*.ml $(SRCDIR)/*.ml[ily] \
 		$(ED_DIR)/*.ml $(ED_DIR)/*.mli \
 
 # export
