- ocamlgraph now requires ocaml 3.10 or higher - graph editor automatically compiles if lablgtk2 is installed - Dot: fixed bug in the parsing of subgraphs (patch by Anne Pacalet) - New function Blocks.after_unserialisation - FAQ improved - comments in *.mli improved

--- a/Makefile.in
+++ b/Makefile.in
@@ -54,8 +54,11 @@ OFLAGS = $(INCLUDES) @FORPACK@
 
 NAME=ocamlgraph
 
+ifeq (@LABLGTK2@,no)
 all: byte $(OCAMLBEST)
-#all: byte $(OCAMLBEST) editor-@LABLGTK2@
+else
+all: byte $(OCAMLBEST) editor-@LABLGTK2@
+endif
 
 # bytecode and native-code compilation
 ######################################
