Makefile: fixed bug of ocamldep under Windows (Benjamin's patch)

--- a/Makefile.in
+++ b/Makefile.in
@@ -27,7 +27,7 @@ MANDIR=@mandir@
 # Other variables set by ./configure
 OCAMLC   = @OCAMLC@
 OCAMLOPT = @OCAMLOPT@
-OCAMLDEP = @OCAMLDEP@
+OCAMLDEP = @OCAMLDEP@ -slash
 OCAMLDOC = @OCAMLDOC@
 OCAMLLEX = @OCAMLLEX@
 OCAMLYACC= @OCAMLYACC@
