--- a/Makefile.in
+++ b/Makefile.in
@@ -160,10 +160,10 @@ VIEWER_CMOLIB	= $(VIEWER_DIR)/viewgraph.cmo
 VIEWER_CMILIB	= $(VIEWER_DIR)/viewgraph.cmi
 VIEWER_CMXLIB	= $(VIEWER_DIR)/viewgraph.cmx
 
-$(VIEWER_CMOLIB): $(VIEWER_CMO)
+$(VIEWER_CMOLIB): $(filter-out $(VIEWER_DIR)/viewGraph_test.cmo, $(VIEWER_CMO))
 	ocamlc -o $@ $(VIEWER_INCLUDES) -pack $^
 
-$(VIEWER_CMXLIB): $(VIEWER_CMX)
+$(VIEWER_CMXLIB): $(filter-out $(VIEWER_DIR)/viewGraph_test.cmx, $(VIEWER_CMX))
 	ocamlopt -o $@ $(VIEWER_INCLUDES) -pack $^
 
 $(VIEWER_DIR)/viewgraph.byte: $(CMA) $(VIEWER_CMOLIB)
@@ -198,10 +198,10 @@ DGRAPH_CMOLIB	= $(DGRAPH_DIR)/dgraph.cmo
 DGRAPH_CMILIB	= $(DGRAPH_DIR)/dgraph.cmi
 DGRAPH_CMXLIB	= $(DGRAPH_DIR)/dgraph.cmx
 
-$(DGRAPH_CMOLIB): $(DGRAPH_CMO)
+$(DGRAPH_CMOLIB): $(filter-out $(DGRAPH_DIR)/dGraphViewer.cmo, $(DGRAPH_CMO))
 	ocamlc -o $@ $(DGRAPH_INCLUDES) -pack $^
 
-$(DGRAPH_CMXLIB): $(DGRAPH_CMX)
+$(DGRAPH_CMXLIB): $(filter-out $(DGRAPH_DIR)/dGraphViewer.cmx, $(DGRAPH_CMX))
 	ocamlopt -o $@ $(DGRAPH_INCLUDES) -pack $^
 
 $(DGRAPH_DIR)/dgraph.byte: $(CMA) $(DGRAPH_CMOLIB)
