--- a/configure.in
+++ b/configure.in
@@ -141,21 +141,20 @@ AC_CHECK_PROG(OCAMLWEB,ocamlweb,ocamlweb,true)
 
 AC_CHECK_PROG(OCAMLFIND,ocamlfind,ocamlfind)
 
+if test "$OCAMLBEST" = "opt"; then
+  SUFFIX=cmxa;
+else
+  SUFFIX=cma;
+fi
+
 # checking for lablgtk2 and lablgnomecanvas
-AC_CHECK_PROG(LABLGTK2,lablgtk2,yes,no)
+AC_CHECK_FILE($OCAMLLIB/lablgtk2/lablgtk.$SUFFIX,LABLGTK2=yes,LABLGTK2=no)
 if test "$LABLGTK2" = yes ; then
-   if test -d "$OCAMLLIB/lablgtk2" ; then
-      INCLUDEGTK2="-I +lablgtk2"
-      if test "$OCAMLBEST" = "opt"; then
-         SUFFIX=cmxa;
-      else
-         SUFFIX=cma;
-      fi
-      AC_CHECK_FILE($OCAMLLIB/lablgtk2/lablgnomecanvas.$SUFFIX,LABLGNOMECANVAS=yes,LABLGNOMECANVAS=no)
-   else
-      LABLGTK2=no
-      LABLGNOMECANVAS=no
-   fi      
+  INCLUDEGTK2="-I +lablgtk2"
+  AC_CHECK_FILE($OCAMLLIB/lablgtk2/lablgnomecanvas.$SUFFIX,LABLGNOMECANVAS=yes,LABLGNOMECANVAS=no)
+else
+  LABLGTK2=no
+  LABLGNOMECANVAS=no
 fi
 
 # platform
