--- a/Makefile.in
+++ b/Makefile.in
@@ -103,7 +103,7 @@ graph.cmo: $(CMI) $(CMO)
 graph.cmx: $(CMI) $(CMX)
 	$(OCAMLOPT) $(INCLUDES) -pack -o $@ $^
 
-VERSION=1.2+dev
+VERSION=1.3
 
 src/version.ml: Makefile
 	rm -f $@
