--- a/Makefile.in
+++ b/Makefile.in
@@ -432,7 +432,7 @@ export-web: www/version.prehtml
 
 export-doc: $(DOC_CMO)
 	rm -f $(WWW)/doc/*
-	-$(OCAMLDOC) -d $(WWW)/doc -html $(INCLUDES) $(DOC_SRC)
+	-$(OCAMLDOC) -d $(WWW)/doc -html $(DGRAPH_INCLUDES) $(DOC_SRC)
 
 MISCFTP = $(HOME)/WWW/ftp/ocaml/misc
 DELAUNAY=delaunay.ml delaunay.mli
