--- a/Makefile.in
+++ b/Makefile.in
@@ -127,9 +127,9 @@ ED_CMI = $(ED_CMO:.cmo=.cmi)
 ED_INCLUDES = @INCLUDEGTK2@ -I +threads -I $(ED_DIR) $(INCLUDES) -I .
 
 $(ED_CMI) $(ED_CMO): BFLAGS+= $(ED_INCLUDES)
-$(ED_CMO): graph.cmi
+$(ED_CMI) $(ED_CMO): $(CMA)
 $(ED_CMX): OFLAGS+= $(ED_INCLUDES)
-$(ED_CMX): graph.cmi
+$(ED_CMX): $(CMXA)
 
 $(ED_DIR)/editor.byte: $(CMA) $(ED_CMO)
 	$(OCAMLC) -g -o $@ $(ED_INCLUDES) \
@@ -156,7 +156,8 @@ VIEWER_INCLUDES= @INCLUDEGTK2@ -I $(VIEWER_DIR) $(INCLUDES) -I .
 
 $(VIEWER_CMI) $(VIEWER_CMO): BFLAGS+= $(VIEWER_INCLUDES)
 $(VIEWER_CMX): OFLAGS+= $(VIEWER_INCLUDES) -for-pack Viewgraph
-$(VIEWER_CMI) $(VIEWER_CMO) $(VIEWER_CMX): graph.cmi
+$(VIEWER_CMI) $(VIEWER_CMO): $(CMA)
+$(VIEWER_CMX): $(CMXA)
 
 VIEWER_CMOLIB	= $(VIEWER_DIR)/viewgraph.cmo
 VIEWER_CMILIB	= $(VIEWER_DIR)/viewgraph.cmi
@@ -194,11 +195,15 @@ DGRAPH_INCLUDES= @INCLUDEGTK2@ -I $(DGRAPH_DIR) $(INCLUDES) -I .
 $(DGRAPH_CMI) $(DGRAPH_CMO): BFLAGS+= $(DGRAPH_INCLUDES)
 $(DGRAPH_CMX): OFLAGS+= $(DGRAPH_INCLUDES) -for-pack Dgraph
 
-$(DGRAPH_CMI) $(DGRAPH_CMO) $(DGRAPH_CMX): graph.cmi
+$(DGRAPH_CMI) $(DGRAPH_CMO): $(CMA)
+$(DGRAPH_CMX): $(CMXA)
 
 DGRAPH_CMOLIB	= $(DGRAPH_DIR)/dgraph.cmo
 DGRAPH_CMILIB	= $(DGRAPH_DIR)/dgraph.cmi
 DGRAPH_CMXLIB	= $(DGRAPH_DIR)/dgraph.cmx
+
+dgraph/dGraphViewer.cmo: $(DGRAPH_CMOLIB)
+dgraph/dGraphViewer.cmx: $(DGRAPH_CMXLIB)
 
 $(DGRAPH_CMOLIB): $(filter-out $(DGRAPH_DIR)/dGraphViewer.cmo, $(DGRAPH_CMO))
 	$(OCAMLC) -o $@ $(DGRAPH_INCLUDES) -pack $^
