new module 'Graphml' by Pietro Abate

--- a/Makefile.in
+++ b/Makefile.in
@@ -71,7 +71,8 @@ CMO = 	version util blocks persistent imperative \
 	delaunay builder classic rand oper \
 	components path nonnegative traverse coloring topological kruskal flow \
         dominator graphviz gml dot_parser dot_lexer dot pack \
-	gmap minsep cliquetree mcs_m md strat fixpoint leaderlist contraction
+	gmap minsep cliquetree mcs_m md strat fixpoint leaderlist contraction \
+	graphml
 CMO := $(LIB) $(patsubst %, $(SRCDIR)/%.cmo, $(CMO))
 
 CMX = $(CMO:.cmo=.cmx)
@@ -271,6 +272,9 @@ test-bf: $(CMA) tests/test_bf.ml
 
 nonneg: $(CMA) tests/nonneg.ml
 	ocaml unix.cma graphics.cma $^
+
+test-graphml: $(CMA) tests/testgraphml.ml
+	ocaml unix.cma $^
 
 bin/test.byte: $(CMA) tests/test.cmo
 	$(OCAMLC) -g -unsafe -o $@ unix.cma graphics.cma $^
