--- a/Makefile.in
+++ b/Makefile.in
@@ -72,7 +72,7 @@ CMO = 	version util blocks persistent imperative \
 	components path nonnegative traverse coloring topological kruskal flow \
         dominator graphviz gml dot_parser dot_lexer dot pack \
 	gmap minsep cliquetree mcs_m md strat fixpoint leaderlist contraction \
-	graphml
+	graphml merge
 CMO := $(LIB) $(patsubst %, $(SRCDIR)/%.cmo, $(CMO))
 
 CMX = $(CMO:.cmo=.cmx)
