.gitignore, updated web site

--- a/www/Makefile
+++ b/www/Makefile
@@ -1,22 +1,19 @@
 
-TOP = /users/demons/filliatr/www
-
-INCLUDES = $(TOP)/macros.prehtml  $(TOP)/footer.prehtml version.prehtml
-LIBS = -I $(TOP)
+INCLUDES = macros.prehtml version.prehtml
 
 OCAMLGRAPHHOME = /users/www-perso/projets/ocamlgraph
 
 ALL = index.fr.html  index.en.html
 
 install: all
-	cp -f $(ALL) $(OCAMLGRAPHHOME)
+	scp $(ALL) filliatr@acces:$(OCAMLGRAPHHOME)
 
 all: $(ALL)
 
 clean::
-	rm -f *~ *.fr.html *.en.html 
+	rm -f *~ *.fr.html *.en.html
 
-YAMLPP=yamlpp $(TOP)/macros.prehtml version.prehtml
+YAMLPP=yamlpp macros.prehtml version.prehtml
 
 version.prehtml:
 	make -C .. www/version.prehtml
