more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@
 /www/index.en.html
 /www/index.fr.html
 /www/version.prehtml
+/bin/
+/dgraph/dgraph.byte
+/dgraph/dgraph.opt
+/editor/editor.byte
+/editor/editor.opt
+/view_graph/viewgraph.byte
+/view_graph/viewgraph.opt
