Prim's algorithm (completed)

--- a/Makefile.in
+++ b/Makefile.in
@@ -255,7 +255,7 @@ bin/demo_planar.byte: $(CMA) examples/demo_planar.cmo
 bin/demo_planar.opt: $(CMXA) examples/demo_planar.cmx
 	$(OCAMLOPT) -o $@ graphics.cmxa unix.cmxa $^
 
-bin/demo_prim.opt: $(CMXA) examples/demo_prim.cmx
+bin/demo_prim.opt: $(CMXA) examples/demo_prim.ml
 	$(OCAMLOPT) -o $@ graphics.cmxa unix.cmxa $^
 
 bin/color.byte: $(CMA) examples/color.cmo
