--- a/Makefile.in
+++ b/Makefile.in
@@ -385,7 +385,7 @@ ifeq (@LABLGNOMECANVAS@,yes)
 		$(SRCDIR)/*.mli $(VIEWER_DIR)/*.mli $(DGRAPH_DIR)/*.mli \
 		graph$(LIBEXT) graph.cmx graph.cmo graph.cmi $(CMA) $(CMXA) \
 		$(VIEWER_CMXLIB) $(VIEWER_CMOLIB) $(DGRAPH_CMXLIB) \
-		$(DGRAPH_CMOLIB)
+		$(DGRAPH_CMOLIB) $(DGRAPH_CMILIB)
 else
 	$(OCAMLFIND) install ocamlgraph META \
 		$(SRCDIR)/*.mli $(VIEWER_DIR)/*.mli $(DGRAPH_DIR)/*.mli \
