--- a/Makefile.in
+++ b/Makefile.in
@@ -106,7 +106,7 @@ graph.cmo: $(CMI) $(CMO)
 graph.cmx: $(CMI) $(CMX)
 	$(OCAMLOPT) $(INCLUDES) -pack -o $@ $^
 
-VERSION=1.8.3
+VERSION=1.8.3+dev
 
 src/version.ml: Makefile
 	rm -f $@
